Fix fift icon and align icons to bottom

--- a/styles/style.css
+++ b/styles/style.css
@@ -80,6 +80,7 @@ body {
 
 .social-icons {
   display: flex;
+  align-items: baseline;
   gap: 12px;
 }
 
